--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, user-scalable=no"
+    />
     <title>Phoniex</title>
     <link rel="stylesheet" href="stylesheet/main.css" />
   </head>
@@ -22,8 +25,7 @@
         <section class="contain hmContent">
           <p class="sm-txt">Welcome to the</p>
           <h2>
-            India’s <span> Fastest & Affordable</span> <br />Hosting Service
-            Ever.
+            India’s <span> Fastest & Affordable</span> Hosting Service Ever.
           </h2>
           <p class="sm-about">
             Are you looking for fastest web hosting services In 2020 which
@@ -36,7 +38,14 @@
             View Plans
           </button>
         </section>
-        <img src="assets/ServerArtwork.svg" class="artwork" alt="Server Artwork" />
+        <img
+          src="assets/ServerArtwork.svg"
+          class="artwork"
+          alt="Server Artwork"
+        />
+      </section>
+      <section>
+        <!-- <h1>About Me</h1> -->
       </section>
     </main>
     <script src="js/particles.min.js"></script>
