--- a/index.html
+++ b/index.html
@@ -2,10 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Phoniex</title>
     <link rel="stylesheet" href="stylesheet/main.css" />
   </head>
@@ -44,8 +41,146 @@
           alt="Server Artwork"
         />
       </section>
-      <section>
-        <!-- <h1>About Me</h1> -->
+      <section class="services">
+        <figure>
+          <div class="img">
+            <img src="assets/DedicatedServer.svg" alt="DedicatedServer" />
+          </div>
+          <div class="conTxt contain">
+            <figcaption>
+              <h2>Dedicated Server Hosting</h2>
+              <p class="ltText">
+                A dedicated hosting service, dedicated server, or managed
+                hosting service is a type of Internet hosting in which the
+                client leases an entire server not shared with anyone else. This
+                is more flexible than shared hosting, as organizations have full
+                control over the server(s), including choice of operating
+                system, hardware, etc.
+              </p>
+              <p class="ulCap">The Features are as follows :</p>
+              <ul>
+                <li>Operating system choices</li>
+                <li>Server configuration</li>
+                <li>Hardware choices</li>
+                <li>Internet Speed</li>
+                <li>Fastest Storages</li>
+                <li>Physical 6 layers security</li>
+                <li>Control panel options</li>
+                <li>Security</li>
+                <li>Server management</li>
+                <li>High availability</li>
+                <li>Ease Technical Support 24x7</li>
+              </ul>
+              <p class="price">
+                Starting from <br />
+                <span class="txt-primary">
+                  ₹699.00/- <strong>month</strong></span
+                >
+              </p>
+              <button class="btn">Expore More</button>
+              <button class="btn btn-secondary">Request a demo</button>
+              <p class="sm-text">
+                * Terms and Condition applied to the above products
+              </p>
+            </figcaption>
+          </div>
+        </figure>
+        <figure>
+          <div class="conTxt contain vpsCon">
+            <figcaption>
+              <h2>Virtual Private Server Hosting</h2>
+              <p class="ltText">
+                A VPS runs its own copy of an operating system, and customers
+                may have superuser-level access to that operating system
+                instance, so they can install almost any software that runs on
+                that OS. For many purposes they are functionally equivalent to a
+                dedicated physical server, and being software-defined, are able
+                to be much more easily created and configured. They are priced
+                much lower than an equivalent physical server. However, as they
+                share the underlying physical hardware with other VPS.
+              </p>
+              <p class="ulCap">The Features are as follows :</p>
+              <ul>
+                <li>Guaranteed Resources</li>
+                <li>Server configuration</li>
+                <li>Hardware choices</li>
+                <li>Control panel options</li>
+                <li>Security</li>
+                <li>Server management</li>
+                <li>High availability</li>
+                <li>Ease Technical Support 24x7</li>
+              </ul>
+              <p class="price">
+                Starting from <br /><span
+                  >₹399.00/- <strong>month</strong></span
+                >
+              </p>
+              <button class="btn">Expore More</button>
+              <button class="btn btn-secondary">Request a demo</button>
+              <p class="sm-text">
+                * Terms and Condition applied to the above products
+              </p>
+            </figcaption>
+          </div>
+          <div class="img hueChange">
+            <img src="assets/VPS.svg" alt="VPS" />
+          </div>
+        </figure>
+      </section>
+      <section class="otherService">
+        <div class="contain">
+          <h6>we also offer</h6>
+          <h2>Shared Hosting Service</h2>
+          <br /><br />
+          <h4>Our Plans are as follows...</h4>
+          <div class="plansChart">
+            <div class="chart">
+              <h3>Starter Web Hosting</h3>
+              <p class="sm-text">Good choice for newbies</p>
+              <ul>
+                <li>5 Websites</li>
+                <li>6 Email Accounts</li>
+                <li>Unlimited Monthly Visitors</li>
+                <li>Control panel options</li>
+                <li>WordPress Acceleration (LSCWP)</li>
+                <li>Free SSL Certificate</li>
+                <li>Free Domain x 1</li>
+              </ul>
+              <p class="price">₹ 39.00/-</p>
+              <button class="btn shadow-less">Buy Now</button>
+            </div>
+            <div class="chart">
+              <h3>Premium Web Hosting</h3>
+              <p class="sm-text">The Best choice anyone can go for</p>
+              <ul>
+                <li>100 Websites</li>
+                <li>100 Email Accounts</li>
+                <li>Unlimited Monthly Visitors</li>
+                <li>Control panel options</li>
+                <li>WordPress Acceleration (LSCWP)</li>
+                <li>Free SSL Certificate</li>
+                <li>Free Domain x 50</li>
+              </ul>
+              <p class="price">₹ 259.00/-</p>
+              <button class="btn shadow-less">Buy Now</button>
+            </div>
+            <div class="chart">
+              <h3>Platinum Web Hosting</h3>
+              <p class="sm-text">If you have too much extra penny</p>
+              <ul>
+                <li>500 Websites</li>
+                <li>1000 Email Accounts</li>
+                <li>Unlimited Monthly Visitors</li>
+                <li>Control panel options</li>
+                <li>WordPress Acceleration (LSCWP)</li>
+                <li>Free SSL Certificate</li>
+                <li>Free Domain x 500</li>
+              </ul>
+              <p class="price">₹ 699.00/-</p>
+              <button class="btn shadow-less">Buy Now</button>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
     <script src="js/particles.min.js"></script>
