--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Phoniex</title>
-    <link rel="stylesheet" href="stylesheet/main.css" />
-    <link rel="stylesheet" href="stylesheet/animations.css" />
+    <link rel="stylesheet" href="stylesheet/animations.css" media="all" />
+    <link rel="stylesheet" href="stylesheet/main.css" media="all" />
   </head>
   <body>
     <header class="ani" data-aniClass="opaMore" data-aniFirst="true">
