--- a/index.html
+++ b/index.html
@@ -3,9 +3,42 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Phoniex</title>
+    <meta name="theme-color" content="#4b4d9c" />
+    <meta
+      name="keywords"
+      content="Phoniex, India's, india, fastest, affordable, hosting, service"
+    />
+    <meta name="author" content="Drubajyoti Debnath" />
+    <meta
+      name="description"
+      content="Are you looking for fastest web hosting services In 2020 which should be best, secure, reliable then you are on the right place."
+    />
+    <meta property="og:title" content="Phoniex" />
+    <meta
+      property="og:description"
+      content="Are you looking for fastest web hosting services In 2020 which should be best, secure, reliable then you are on the right place."
+    />
+    <meta
+      property="og:image"
+      itemprop="image"
+      content="assets/OG/600x315.webp"
+    />
+    <meta
+      property="og:image"
+      itemprop="image"
+      content="assets/OG/200x300.webp"
+    />
+    <meta
+      property="og:image"
+      itemprop="image"
+      content="assets/OG/1200x630.webp"
+    />
+    <meta property="og:type" content="Website" />
+    <title>Phoniex | India's fastest and affordable Hosting Service</title>
     <link rel="stylesheet" href="stylesheet/animations.css" media="all" />
     <link rel="stylesheet" href="stylesheet/main.css" media="all" />
+    <link rel="icon" href="assets/Logo.webp" sizes="24x24" />
+    <link rel="manifest" href="manifest.json" />
   </head>
   <body>
     <header class="ani" data-aniClass="opaMore" data-aniFirst="true">
@@ -73,7 +106,7 @@
         <figure>
           <div class="img">
             <img
-              src="assets/DedicatedServer.svg"
+              src="assets/DedicatedServer.webp"
               alt="DedicatedServer"
               class="ani"
               data-aniClass="aniFleft"
@@ -210,7 +243,7 @@
           </div>
           <div class="img hueChange">
             <img
-              src="assets/VPS.svg"
+              src="assets/VPS.webp"
               alt="VPS"
               class="ani"
               data-aniClass="aniFright"
@@ -309,7 +342,7 @@
       </section>
       <section class="customers">
         <h2 class="ani" data-aniClass="aniFup">Our Customers</h2>
-        <div class="gridCus">
+        <div class="gridCus ani" data-aniClass="opaMore">
           <img src="assets/Customers/1.webp" alt="Foundary" />
           <img src="assets/Customers/2.webp" alt="Corporate" />
           <img src="assets/Customers/3.webp" alt="Green Company" />
