--- a/index.html
+++ b/index.html
@@ -35,20 +35,21 @@
     />
     <meta property="og:type" content="Website" />
     <title>Phoniex | India's fastest and affordable Hosting Service</title>
-    <link rel="stylesheet" href="stylesheet/animations.css" media="all" />
     <link rel="stylesheet" href="stylesheet/main.css" media="all" />
+    <link rel="stylesheet" href="stylesheet/animations.css" media="all" />
     <link rel="icon" href="assets/Logo.webp" sizes="24x24" />
     <link rel="manifest" href="manifest.json" />
   </head>
   <body>
+    <h1>Phoniex</h1>
     <header class="ani" data-aniClass="opaMore" data-aniFirst="true">
       <img src="assets/PhoniexLogo.svg" alt="Phoniex." />
       <nav>
-        <a href="home.html" class="active">home</a>
-        <a href="home.html">about</a>
-        <a href="home.html">product</a>
-        <a href="home.html">services</a>
-        <a href="home.html">solutions</a>
+        <a href="#" class="active">home</a>
+        <a href="#">about</a>
+        <a href="#">product</a>
+        <a href="#">services</a>
+        <a href="#">solutions</a>
       </nav>
     </header>
     <main>
@@ -401,9 +402,9 @@
         Illustration created by - www.freepik.com
       </a>
     </div>
-    <script src="js/particles.min.js"></script>
-    <script src="js/particles-app.js"></script>
-    <script src="js/ScrollAnimation-min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/particles.min.js" defer async></script>
+    <script src="js/particles-app.js" defer async></script>
+    <script src="js/ScrollAnimation-min.js" defer async></script>
+    <script src="js/main.js" defer async></script>
   </body>
 </html>
